<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/img_fondo"
    tools:context="com.Appisos.apps.Login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_pantalla_registro"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <!-- Login Button -->

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutEntrar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bLogin"
            android:textAllCaps="false"
            android:background="@drawable/barra_verde_login"
            android:src="@drawable/texto_entrar"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bRegistroH"
            android:textAllCaps="false"
            android:background="@drawable/barra_blanca_login"
            android:src="@drawable/texto_registrarse"
            android:textColor="@color/bar_login"/>

    </LinearLayout>


</LinearLayout>
